WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106177
[GStreamer] Don't call gst_video_info_from_caps() with non-fixed caps
https://bugs.webkit.org/show_bug.cgi?id=106177
Summary
[GStreamer] Don't call gst_video_info_from_caps() with non-fixed caps
Sebastian Dröge (slomo)
Reported
2013-01-05 07:22:59 PST
Created
attachment 181437
[details]
Don't call gst_video_info_from_caps() with non-fixed caps See summary and patch, doing so will cause an assertion.
Attachments
Don't call gst_video_info_from_caps() with non-fixed caps
(1.06 KB, patch)
2013-01-05 07:22 PST
,
Sebastian Dröge (slomo)
no flags
Details
Formatted Diff
Diff
Don't call gst_video_info_from_caps() with non-fixed caps
(1.89 KB, patch)
2013-01-06 05:25 PST
,
Sebastian Dröge (slomo)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2013-01-05 09:30:47 PST
Hi! Do you mind also generating a ChangeLog with Tools/Scripts/prepare-Changelog. If you upload your patch with Tools/Script/webkit-patch it will do this automatically.
Sebastian Dröge (slomo)
Comment 2
2013-01-06 05:25:17 PST
Created
attachment 181457
[details]
Don't call gst_video_info_from_caps() with non-fixed caps
WebKit Review Bot
Comment 3
2013-01-06 12:27:43 PST
Comment on
attachment 181457
[details]
Don't call gst_video_info_from_caps() with non-fixed caps Clearing flags on attachment: 181457 Committed
r138919
: <
http://trac.webkit.org/changeset/138919
>
WebKit Review Bot
Comment 4
2013-01-06 12:27:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug