Bug 106177 - [GStreamer] Don't call gst_video_info_from_caps() with non-fixed caps https://bugs.webkit.org/show_bug.cgi?id=106177

Patch by Sebastian Dröge <sebastian.droege@collabora.co.uk> on 2013-01-06
Reviewed by Martin Robinson.

* platform/graphics/gstreamer/GStreamerVersioning.cpp:
(getVideoSizeAndFormatFromCaps):
Don't call gst_video_info_from_caps() with non-fixed caps as
it will cause assertions.

Canonical link: https://commits.webkit.org/124389@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138919 268f45cc-cd09-0410-ab3c-d52691b4dbfc