Source/WebCore/platform/graphics/gstreamer/GStreamerVersioning.cpp
@@ -75,7 +75,8 @@ bool getVideoSizeAndFormatFromCaps(GstCaps* caps, WebCore::IntSize& size, GstVid
 {
 #ifdef GST_API_VERSION_1
     GstVideoInfo info;
-    if (!gst_video_info_from_caps(&info, caps))
+
+    if (!gst_caps_is_fixed(caps) || !gst_video_info_from_caps(&info, caps))
         return false;
 
     format = GST_VIDEO_INFO_FORMAT(&info);
